# advent_2022

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  wip.py
days/01/: part1.py  part2.py
days/02/: part1.py  part2.py
days/03/: part1.py  part2.py
days/04/: part1.py  part2.py
days/05/: part1.py  part2.py
days/06/: part1.py  part2.py  part2_dicts.py
days/07/: part1.py  part2.py
days/08/: part1.py  part2.py
days/09/: part1.py  part2.py
days/10/: part1.py  part2.py
days/11/: part1.py  part2.py
days/12/: wip.py
days/13/: part1.py  part2.py
days/14/: part1.py  part2.py
days/15/: part1.py  part2.py
days/16/: part1.py  part2.py
days/18/: part1.py  part2.py
days/19/: part1.py  part2.py  solution.py
days/20/: part1.py  part2.py
days/21/: part1.py  part2.py
days/22/: part1.py
days/23/: part1.py  part2.py
days/24/: day_24.py
days/25/: part1.py
