[project]
name = "advent_2022"
version = "2022.12.0"
description = "Solutions to Advent of Code 2022"
readme = "README.md"
license = {"file" = "LICENSE"}

dependencies = [
    "jupyterlab",
    "jupyterlab-git",
    "jupyterlab-vim",
    "jupyterlab-lsp",
    "python-lsp-server[flake8,rope]",
    "ipympl",
    "nodeenv",
    "numpy",
    "pandas",
    "pre-commit",
    "pytest",
    "icecream",
    "ruff"
]

[build-system]
requires = [ "setuptools", "build" ]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F", "I", "U", "ERA", "C", "RUF" ]
fix = true
[tool.ruff.per-file-ignores]
"wip.py" = [ "F401" ]
